# ai-workforce

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  architecture.md  main.py  memory.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.githooks/: post-commit  pre-commit
agents/: __init__.py  base_agent.py  orchestrator.py
agents/development/: __init__.py  ai_engineer_agent.py  fullstack_developer_agent.py
config/: agents.yaml  tasks.yaml
deploy/: Dockerfile  alert_rules.yml  docker-compose.yml  init.sql  modal_deploy.py  nginx.conf  prometheus.yml
deploy/grafana/dashboards/: cost-monitoring.json  pod-performance.json  system-health.json  workforce-overview.json
deploy/grafana/provisioning/: dashboards.yml  datasources.yml
docs/: README.md  api-reference.md  competitive-positioning.md  customer-onboarding.md  deployment.md  free-tier-deployment.md  product-alignment-status.md  production-setup.md  productization-plan.md  quick-start.md
examples/: basic_workflow.py  execute_goal.py
interfaces/: __init__.py  streamlit_app.py  telegram_bot.py
scripts/: push-workflow.sh  setup-git-hooks.sh
tests/: __init__.py  conftest.py  run_tests.py  test_base_agent.py  test_main.py  test_memory.py  test_metrics.py  test_orchestrator.py  test_pods.py  test_tools.py
tools/: __init__.py  apollo_tool.py  firecrawl_tool.py  flux_tool.py  github_tool.py  image_upscaler_tool.py  instantly_tool.py  telegram_tool.py
utils/: metrics.py
